# healthbot

./: Dockerfile  README.md  docker-compose.yml  main.py  pyproject.toml  requirements.txt
app/: dependencies.py  main.py
app/middleware/: authenticate.py
app/routes/v1/: generate.py  ingest.py  retrieve.py
app/schemas/: base_response.py  generate.py  ingest.py  retrieve.py
app/services/: ingestion_service.py  retrieval_service.py
app/utils/: translate.py
data/: answers.txt
